# ecommerce-analytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  daily_data_update.yml
dags/: daily_pipeline.py
dashboard/: 1_price_tracking.py  app.py  requirements.txt
dashboard/pages/: 2_price_gallery.py
dbt/: dbt_project.yml  package-lock.yml
dbt/macros/: mask_zip.sql
dbt/metrics/: metrics.yml
dbt/models/marts/: _marts.yml  dim_date.sql  mart_cohorts.sql  mart_customer_features.sql  mart_customers.sql  mart_price_history.sql  mart_sales.sql  mart_sellers.sql
dbt/models/staging/: stg_customers.sql  stg_order_items.sql  (+2 more)
dbt/snapshots/: snap_products.sql  snap_sellers.sql
dbt/tests/: assert_delivery_after_purchase.sql  assert_retention_rate_valid.sql  assert_revenue_non_negative.sql  assert_scd_no_overlapping_periods.sql  assert_volume_anomaly_orders.sql
docs/: business_glossary.md  mercadolibre_data_flow.md
docs/decisions/: ADR-001-bigquery-vs-snowflake.md  ADR-002-dbt-vs-python-transforms.md  ADR-003-incremental-vs-full-refresh.md  ADR-004-backfill-strategy.md  ADR-005-secrets-management.md  ADR-006-scd-type2-snapshots.md
docs/runbooks/: RUNBOOK-pipeline-failure.md  RUNBOOK-schema-change.md
ingestion/: load_mercadolibre.py  load_olist.py  load_orders.py  load_to_bq.py
ingestion/utils/: bq_client.py  circuit_breaker.py  config.py  gcs_client.py  mercadolibre_client.py  rate_limiter.py  schemas.py  secrets.py
llm/: audit_log.py  nl_to_sql.py  schema_context.py
(+9 files in other folders)
