[project]
name = "ecommerce-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery==1.8.0",
    "dbt-core==1.8.0",
    "google-cloud-bigquery>=3.0,<4.0",
    "google-cloud-secret-manager>=2.29.0",
    "google-cloud-storage>=2.4,<3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]
